Bug 287712 - First run property in nepomukstrigirc does not switch to "false".
Summary: First run property in nepomukstrigirc does not switch to "false".
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.7
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-27 21:48 UTC by Jiří Appl
Modified: 2011-12-06 16:05 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jiří Appl 2011-11-27 21:48:38 UTC
Version:           4.7 (using KDE 4.7.3) 
OS:                Linux

I have recently removed all nepomuk, strigi and akonadi related files to start with a clean shield. Now, as you would expect, Nepomuk starts indexing everything again and after while, it says it finished. However, the "first run" value in nepomukstrigirc config file remains set to "true". So after restart, Nepomuk again says: "Starting indexing for faster search...".

Also, if I log off and change the value while the Nepomuk is not running to "false", it reverts back to "true".

Reproducible: Always

Steps to Reproduce:
1) start with a new user profile with 
2) let Nepomuk index stuff (I have tried it with an unpacked boost library)
3) wait for Nepomuk to finish indexing stuff
4) first run in nepomukstrigirc should be false and it is not

Actual Results:  
first run is true, despite nepomuk says it finished indexing

Expected Results:  
after the initial indexing, first run should be false
Comment 1 naraesk 2011-11-27 23:28:24 UTC
Same here with KDE 4.7.3 and Fedora 16. Very annoying.
Comment 2 Karthik Periagaram 2011-11-28 01:56:28 UTC
I can confirm this behavior on arch linux (packages current as of 2011-11-27)

arch 64-bit
kde sc 4.7.3
virtuoso 6.1.4

I also see $HOME/.kde4/share/config/nepomukstrigirc contain "first run = true".
Comment 3 Michael Bach 2011-11-30 08:12:29 UTC
I want to add my voice to this. Same behaviour here (packages as of 2011-11-30)

arch x86_64
kde 4.7.3
virtuoso 6.14.

exact same behaviour as OP. How can we further investigate this? Can someone give us a hint?
Comment 4 Sebastian Trueg 2011-11-30 12:45:28 UTC
Git commit 11701cc0a066ec487bfc85a403542046955a4292 by Sebastian Trueg.
Committed on 30/11/2011 at 13:44.
Pushed by trueg into branch 'KDE/4.7'.

When initial indexing is done "initial run" needs to be set "false".

BUG: 287712
FIXED-IN: 4.7.4

M  +1    -1    nepomuk/services/strigi/strigiservice.cpp

http://commits.kde.org/kde-runtime/11701cc0a066ec487bfc85a403542046955a4292
Comment 5 Sebastian Trueg 2011-11-30 12:46:57 UTC
Git commit 1692b50355e19a30c2f573420ab6ac450d0a3c84 by Sebastian Trueg.
Committed on 30/11/2011 at 13:44.
Pushed by trueg into branch 'master'.

When initial indexing is done "initial run" needs to be set "false".

BUG: 287712
FIXED-IN: 4.7.4

M  +1    -1    nepomuk/services/fileindexer/fileindexer.cpp

http://commits.kde.org/kde-runtime/1692b50355e19a30c2f573420ab6ac450d0a3c84
Comment 6 Sebastian Trueg 2011-11-30 12:47:16 UTC
Git commit f70c317a21838fa67aef75aeeb0af2be54fdd881 by Sebastian Trueg.
Committed on 30/11/2011 at 13:43.
Pushed by trueg into branch 'master'.

When initial indexing is done "initial run" needs to be set "false".

BUG: 287712
FIXED-IN: 4.7.4

M  +1    -1    services/fileindexer/fileindexer.cpp

http://commits.kde.org/nepomuk-core/f70c317a21838fa67aef75aeeb0af2be54fdd881
Comment 7 Sebastian Trueg 2011-12-06 16:05:30 UTC
Git commit df8cfe073de10f1eed004cfb327ba1b9916058bd by Sebastian Trueg.
Committed on 30/11/2011 at 13:43.
Pushed by trueg into branch 'symlinkHandling'.

When initial indexing is done "initial run" needs to be set "false".

BUG: 287712
FIXED-IN: 4.7.4

M  +1    -1    services/fileindexer/fileindexer.cpp

http://commits.kde.org/nepomuk-core/df8cfe073de10f1eed004cfb327ba1b9916058bd