When initial indexing is done "initial run" needs to be set "false".

BUG: 287712
FIXED-IN: 4.7.4